# xss-generator

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  FEATURES.md  IMPLEMENTATION_SUMMARY.md  LAUNCH_VERIFICATION.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  STATUS_REPORT.py  api_server.py  config.yaml.example  docker-compose.yml  lib_compliance.py  lib_config.py  lib_logging.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_functional.py  test_modules.py  xssgen.py
.github/workflows/: code-quality.yml  security-ci.yml
payloads/: angular.txt  attribute.txt  blind.txt  csp_bypass.txt  filter_bypass.txt  html.txt  js.txt  mutation.txt  polyglot.txt  waf_advanced.txt
tests/: conftest.py  test_compliance.py  test_config.py  test_logging.py
